--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -84,4 +84,7 @@
 \bibitem{bib_deepFirstSearch}
 %  \url{http://fr.wikipedia.org/wiki/Algorithme_de_parcours_en_profondeur}
   
+\bibitem{bib_metaprogramming}
+% C++ Template Metaprogramming
+
 \end{thebibliography}
